# rs-ai

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
ai/: Cargo.toml
ai-cli/: Cargo.toml
ai-cli/src/: main.rs  options.rs
ai/examples/: structured_output.rs
ai/src/: error.rs  json_types.rs  lib.rs  models.rs  tools.rs
ai/test_data/: models.json  struct_output_request.json  weather_tool_response.json
ai/tests/: structured_output_test.rs  tool_test.rs
