[package]
name = "ai-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ai = { path = "../ai" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
chrono = "0.4"
dotenv = "0.15"
schemars = { version = "0.8", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
