[package]
name = "ai"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0.4", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
env_logger = "0.11"
chrono = "0.4"
